AFS_Dev/src/objects/ServiceGroupConversion__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Use to manage Percentage Split of Service Group Conversion on MC, TC, and SI</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_SG_Name__c</fullName>
        <label>New SG Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SG_Source_Origin__c</fullName>
        <label>SG Source Origin</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Percentage__c</fullName>
        <label>Split Percentage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Service Group Conversion</label>
</CustomObject>